# search

./: collection.md  company_research.ipynb  pyproject.toml  reporter.md  researcher.md
.ipynb_checkpoints/: company_research-Copy1-checkpoint.ipynb  company_research-checkpoint.ipynb  planner-checkpoint.md  pyproject-checkpoint.toml
