[project]
name = "agentic-search"
version = "0.0.1"
description = "agentic search with tavily and openai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tavily-python>=0.7.8",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "json-repair>=0.7.0",
    "fpdf>=1.7.2",
]